# openapi.yaml
@@ -328,6 +328,24 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/app_server/trade_list:
+        get:
+            tags:
+                - App
+            operationId: App_TradeList
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/TradeListReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/app_server/tran:
         post:
             tags:
@@ -346,6 +364,33 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/TranReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/app_server/tran_list:
+        get:
+            tags:
+                - App
+            operationId: App_TranList
+            parameters:
+                - name: type
+                  in: query
+                  schema:
+                    type: string
+                - name: tran
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/TranListReply'
                 default:
                     description: Default error response
                     content:
@@ -573,6 +618,38 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        TradeListReply:
+            type: object
+            properties:
+                trade:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/TradeListReply_List'
+        TradeListReply_List:
+            type: object
+            properties:
+                createdAt:
+                    type: string
+                amountCsd:
+                    type: string
+                amountHbs:
+                    type: string
+                status:
+                    type: string
+        TranListReply:
+            type: object
+            properties:
+                tran:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/TranListReply_List'
+        TranListReply_List:
+            type: object
+            properties:
+                createdAt:
+                    type: string
+                amount:
+                    type: string
         TranReply:
             type: object
             properties:
